# drishti

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Justfile  README.md
.codex/rules/: approved-prefixes.rules  rust-quality.md
.codex/skills/drishti-github-issue-ops/: SKILL.md
.codex/skills/drishti-github-issue-ops/agents/: openai.yaml
.codex/skills/drishti-github-issue-ops/references/: backlog-schema.md
.codex/skills/drishti-github-issue-ops/scripts/: dry_run_sync.sh
.codex/skills/drishti-rust-development/: SKILL.md
.codex/skills/drishti-rust-development/agents/: openai.yaml
.codex/skills/drishti-rust-development/references/: workspace-map.md
.codex/skills/drishti-rust-development/scripts/: dev_loop.sh
.codex/skills/drishti-testing/: SKILL.md
.codex/skills/drishti-testing/agents/: openai.yaml
.codex/skills/drishti-testing/references/: test-matrix.md
.github/workflows/: ci.yml  docs.yml  qemu-ci.yml
config/: drishti.toml
deploy/: docker-compose.yml  drishti.service  prometheus.yml
deploy/qemu/: README.md  kernel.config  prepare.sh  run.sh  run_tests.sh
docs/: README.md  SETUP.md  aether-ebpf-observability-spec.docx
docs/issues/: README.md  backlog.yaml
drishti-common/: Cargo.toml
drishti-common/src/: events.rs  lib.rs  maps.rs
drishti-daemon/: Cargo.toml  build.rs
drishti-daemon/src/: aggregator.rs  config.rs  exporter.rs  lib.rs  loader.rs  main.rs  procfs.rs
drishti-daemon/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  syscall.rs
drishti-daemon/tests/: metrics_integration.rs  privileged_smoke.rs
drishti-docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
drishti-docs/docs/: intro.md  roadmap.md  what-it-solves.md
drishti-docs/docs/architecture/: overview.md  pipeline.md  security-and-capabilities.md
drishti-docs/docs/development/: contributing.md  qemu-ci.md  testing-and-ci.md
drishti-docs/docs/engineering/: spec-alignment.md
drishti-docs/docs/integrations/: grafana.md  prometheus.md  systemd.md
drishti-docs/docs/operations/: performance-budgets.md  qemu-runbook.md  troubleshooting.md
drishti-docs/docs/reference/: api-reference.md  metrics.md
drishti-docs/docs/usage/: collector-matrix.md  configuration.md  quickstart.md
drishti-docs/scripts/: check-mermaid.mjs
drishti-docs/src/components/HomepageFeatures/: index.tsx
drishti-docs/src/pages/: index.tsx
drishti-ebpf/: Cargo.toml
drishti-ebpf/src/: lib.rs  main.rs  programs.rs
grafana/dashboards/: overview.json  process.json  syscalls.json
grafana/provisioning/dashboards/: dashboards.yaml
internal-docs/: SETUP.md
internal-docs/issues/: README.md  backlog.yaml
scripts/: sync_github_issues.sh  validate_codex_skills.py
tests/fixtures/mock_proc/: meminfo
tests/fixtures/mock_proc/100/: stat  statm
tests/fixtures/mock_proc/200/: stat  statm
tests/integration/: README.md  metrics_test.rs  qemu_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
