[workspace]
members = [
  "drishti-common",
  "drishti-ebpf",
  "drishti-daemon",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "tokio"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
libc = "0.2"
prometheus-client = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync", "fs"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true
panic = "abort"
