[package]
name = "drishti-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "drishti-ebpf"
path = "src/main.rs"

[features]
default = []

[target.'cfg(target_arch = "bpf")'.dependencies]
aya_ebpf = { package = "aya-ebpf", version = "0.1" }
aya_ebpf_bindings = { package = "aya-ebpf-bindings", version = "0.1" }
drishti-common = { path = "../drishti-common" }

[lints.rust]
unsafe_code = "allow"
