[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true

[lints.clippy]
all = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
